# rust-pbo-wasm

./: Cargo.toml  build.sh
docs/: index.html  index.js  style.css  worker.js
docs/pkg/: LICENSE  README.md  package.json  pbo_files.d.ts  pbo_files.js  pbo_files_bg.wasm  pbo_files_bg.wasm.d.ts
src/: lib-original.rs  lib.rs
