[package]
name = "pbo_files"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# https://github.com/rustwasm/wasm-bindgen
wasm-bindgen = "0.2.83"

# https://github.com/Badel2/wasm-bindgen-file-reader
wasm-bindgen-file-reader = "1"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3.61"
web-sys = { version = "0.3.60", features = ["console"] }
